--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 # Build outputs
 dist/
 build/
+docs/
 *.tsbuildinfo
 
 # Coverage reports
@@ -65,3 +66,6 @@ temp/
 *.njsproj
 *.sln
 *.sw?
+
+#internal docs
+internal-docs/*
