--- a/.github/workflows/bump-and-release.yml
+++ b/.github/workflows/bump-and-release.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       release_type:
-        description: 'Release type'
+        description: "Release type"
         required: true
-        default: 'patch'
+        default: "patch"
         type: choice
         options:
           - patch
@@ -14,9 +14,9 @@ on:
           - major
           - prerelease
       prerelease_type:
-        description: 'Prerelease type (only for prerelease)'
+        description: "Prerelease type (only for prerelease)"
         required: false
-        default: 'alpha'
+        default: "alpha"
         type: choice
         options:
           - alpha
@@ -33,13 +33,19 @@ jobs:
     outputs:
       new_version: ${{ steps.version.outputs.new_version }}
       new_tag: ${{ steps.version.outputs.new_tag }}
-    
+
     steps:
+      - uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ vars.VERSION_BUMPER_APPID }}
+          private-key: ${{ secrets.VERSION_BUMPER_SECRET }}
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Configure Git
         run: |
@@ -50,7 +56,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -69,7 +75,7 @@ jobs:
         run: |
           RELEASE_TYPE="${{ github.event.inputs.release_type }}"
           PRERELEASE_TYPE="${{ github.event.inputs.prerelease_type }}"
-          
+
           if [ "$RELEASE_TYPE" = "prerelease" ]; then
             # For prerelease, use --preid flag
             NEW_VERSION=$(npm version $RELEASE_TYPE --preid=$PRERELEASE_TYPE --no-git-tag-version)
@@ -77,10 +83,10 @@ jobs:
             # For regular releases
             NEW_VERSION=$(npm version $RELEASE_TYPE --no-git-tag-version)
           fi
-          
+
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "new_tag=$NEW_VERSION" >> $GITHUB_OUTPUT
-          
+
           echo "📦 Bumped version to: $NEW_VERSION"
 
       - name: Update CHANGELOG
@@ -88,17 +94,17 @@ jobs:
           NEW_VERSION="${{ steps.version.outputs.new_version }}"
           RELEASE_TYPE="${{ github.event.inputs.release_type }}"
           DATE=$(date +%Y-%m-%d)
-          
+
           # Create changelog entry
           cat > temp_changelog_entry.md << EOF
           ## [$NEW_VERSION] - $DATE
-          
+
           ### Changes
           - $RELEASE_TYPE release
           - Updated package version to $NEW_VERSION
-          
+
           EOF
-          
+
           # Prepend to CHANGELOG.md if it exists
           if [ -f "CHANGELOG.md" ]; then
             cat temp_changelog_entry.md CHANGELOG.md > temp_changelog.md
@@ -106,9 +112,9 @@ jobs:
           else
             cat > CHANGELOG.md << EOF
           # Changelog
-          
+
           All notable changes to this project will be documented in this file.
-          
+
           EOF
             cat temp_changelog_entry.md >> CHANGELOG.md
           fi
@@ -129,10 +135,10 @@ jobs:
         run: |
           NEW_VERSION="${{ steps.version.outputs.new_version }}"
           RELEASE_TYPE="${{ github.event.inputs.release_type }}"
-          
+
           git add package.json package-lock.json CHANGELOG.md
           git commit -m "chore: bump version to $NEW_VERSION ($RELEASE_TYPE release)
-          
+
           - Updated package.json version
           - Updated CHANGELOG.md  
           - Automated version bump via GitHub Actions"
@@ -141,7 +147,7 @@ jobs:
         run: |
           NEW_TAG="${{ steps.version.outputs.new_tag }}"
           git tag $NEW_TAG
-          git push origin main
+          git push -f origin main
           git push origin $NEW_TAG
           echo "🏷️ Created and pushed tag: $NEW_TAG"
 
