--- a/.github/workflows/quick-release.yml
+++ b/.github/workflows/quick-release.yml
@@ -12,6 +12,9 @@ permissions:
   contents: write
   packages: write
 
+env:
+  APP_SECRET: ${{ secrets.VERSION_BUMPER_SECRET }}
+
 jobs:
   quick-release:
     runs-on: ubuntu-latest
@@ -21,7 +24,7 @@ jobs:
         id: app-token
         with:
           app-id: ${{ vars.VERSION_BUMPER_APPID }}
-          private-key: ${{ secrets.VERSION_BUMPER_SECRET }}
+          private-key: ${{ env.APP_SECRET }}
 
       - name: Checkout code
         uses: actions/checkout@v4
